2009-09-18 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Implemented satellite group selector.


2009-08-23 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Added files with new satellite selector.


2009-08-12 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-tmg.c:
    Fixed bug 2836265: Time controls should wrap around their limits.


2009-08-09 Alexandru Csete <oz9aec at gmail.com>

    * src/compat.[ch]:
    Added sat_file_name_from_catnum_s (gchar *catnum).

    * src/tle-update.[ch]:
    Updated to new .sat and .cat files.

    * src/main.c:
    * src/qth-data.c
    Avoid using tle-lookup.

    * src/tle-lookup.[ch]:
    Deleted.

    * src/sat-cfg.[ch]:
    Include new TLE files in default.
    Introduced configuration version number.
    Reset SAT_CFG_STR_TLE_FILES if version is < 1.1.


2009-08-07 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata/*.sat:
    Packaged .sat files into one satellites.dat file for distribution because
    SF subversion was useless with many small files.


2009-08-06 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-rig-ctrl.c:
    * src/gtk-rot-ctrl.c:
    * src/radio-conf.c:
    * src/rotor-conf.c:
    * src/trsp-conf.c:
    * src/sat-pref-rig.c:
    * src/sat-pref-rot.c:
    * src/gtk-sat-module.c:
    * src/gtk-sat-module-popup.c:
    * src/main.c:
    * src/menubar.c:
    * src/mod-mgr.c:
    * src/qth-editor.c:
    * src/sat-pref-debug.c:
    * src/sat-log-browser.c:
    * src/sat-log.c:
    * src/sat-cfg.c:
    * src/sat-pref-qth.c:
    * src/mod-cfg.c:
    Migrated to new user configuration.

    * src/sgpsdp/sgp4sdp4.h:
    Add new name fields to sat_t structure.

    * src/compat.[ch]:
    Added utility function to build satellite data file path from catalog
    number.

    * stc/gtk-sat-data.c:
    Migrated to new satdata config.

    * src/gtk-polar-view.c:
    * src/gtk-polar-view-popup.c:
    * src/gtk-sat-list-popup.c: