@@ -11,17 +11,17 @@
     More details can be found at the project home page:
 
             http://gpredict.oz9aec.net/
- 
+
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
     (at your option) any later version.
-  
+
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
-  
+
     You should have received a copy of the GNU General Public License
     along with this program; if not, visit http://www.fsf.org/
 */
@@ -39,18 +39,18 @@ extern "C" {
 
 /** \brief Column definitions in the tree. */
 typedef enum {
-        GTK_SAT_SELECTOR_COL_NAME = 0,  /*!< Satellite name. */
-        GTK_SAT_SELECTOR_COL_CATNUM,    /*!< Catalogue Number. */
-        GTK_SAT_SELECTOR_COL_EPOCH,     /*!< Element set epoch. */
-        GTK_SAT_SELECTOR_COL_NUM        /*!< The number of columns. */
+    GTK_SAT_SELECTOR_COL_NAME = 0,  /*!< Satellite name. */
+    GTK_SAT_SELECTOR_COL_CATNUM,    /*!< Catalogue Number. */
+    GTK_SAT_SELECTOR_COL_EPOCH,     /*!< Element set epoch. */
+    GTK_SAT_SELECTOR_COL_NUM        /*!< The number of columns. */
 } gtk_sat_selector_col_t;
 
-	
+
 /** \brief Flags used to indicate which columns should be visible. */
 typedef enum {
-        GTK_SAT_SELECTOR_FLAG_NAME   = 1 << GTK_SAT_SELECTOR_COL_NAME,   /*!< Satellite name. */
-        GTK_SAT_SELECTOR_FLAG_CATNUM = 1 << GTK_SAT_SELECTOR_COL_CATNUM, /*!< Catalogue Number. */
-        GTK_SAT_SELECTOR_FLAG_EPOCH  = 1 << GTK_SAT_SELECTOR_COL_EPOCH,  /*!< Element set epoch. */
+    GTK_SAT_SELECTOR_FLAG_NAME   = 1 << GTK_SAT_SELECTOR_COL_NAME,   /*!< Satellite name. */
+    GTK_SAT_SELECTOR_FLAG_CATNUM = 1 << GTK_SAT_SELECTOR_COL_CATNUM, /*!< Catalogue Number. */
+    GTK_SAT_SELECTOR_FLAG_EPOCH  = 1 << GTK_SAT_SELECTOR_COL_EPOCH,  /*!< Element set epoch. */
 } gtk_sat_selector_flag_t;
 
 
@@ -78,29 +78,30 @@ typedef struct _GtkSatSelectorClass GtkSatSelectorClass;
 /** \brief The GtkSatSelector Structure definition */
 struct _gtk_sat_selector
 {
-	GtkVBox vbox;
+    GtkVBox vbox;
 
-	GtkWidget   *tree;        /*!< The tree. */
-	GtkWidget   *swin;        /*!< Scrolled window. */
-	guint        flags;       /*!< Column visibility flags. */
-        GSList      *selection;   /*!< List of selected satellites. FIXME: remove */
-	gulong       handler_id;  /*!< Toggle signale handler ID (FIXME): remove. */
+    GtkWidget   *tree;        /*!< The tree. */
+    GtkWidget   *swin;        /*!< Scrolled window. */
+    guint        flags;       /*!< Column visibility flags. */
+    GSList      *selection;   /*!< List of selected satellites. FIXME: remove */
+    gulong       handler_id;  /*!< Toggle signale handler ID (FIXME): remove. */
 
-        GtkWidget   *groups;      /*!< Combo box for selecting satellite group. */
-        GSList      *models;      /*!< List of models with index corresponding to groups. */
+    GtkWidget   *groups;      /*!< Combo box for selecting satellite group. */
+    GSList      *models;      /*!< List of models with index corresponding to groups. */
 };
 
 struct _GtkSatSelectorClass
 {
-	GtkVBoxClass parent_class;
+    GtkVBoxClass parent_class;
+
+    void (* gtksatselector) (GtkSatSelector *sel);
 };
 
 
 GtkType    gtk_sat_selector_get_type  (void);
 GtkWidget *gtk_sat_selector_new       (guint flags);
 guint32    gtk_sat_selector_get_flags (GtkSatSelector *selector);
-//void       gtk_sat_selector_select    (GtkSatTree *sat_tree, guint catnum);
-guint     *gtk_sat_selector_get_selected (GtkSatSelector *selector, gsize *size);
+void       gtk_sat_selector_get_selected (GtkSatSelector *selector, gint *catnum, gchar **satname, gdouble *epoch);
 
 #ifdef __cplusplus
 }
